<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneCallFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black">

            <EditText
                android:id="@+id/num_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:paddingRight="50dp"/>

            <Button
                android:id="@+id/backspace_btn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/black"
                android:drawableRight="@drawable/backspace"
                android:paddingRight="10dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/black"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">
                    <Button
                        android:id="@+id/one_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/one" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="DS CALL"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/two_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/two" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="ABC"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/three_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/three" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="DEF"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/four_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/four" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="GHI"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/five_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/five" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="JKL"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/six_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/six" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="MNO"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/seven_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/seven" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="PQRS"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/eight_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/eight" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="TUV"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/nine_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/nine" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="WXYZ"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="13sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/star_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/star" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/zero_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/zero" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="+"
                        android:textAlignment="center"
                        android:textColor="#ccc"
                        android:textSize="14sp"
                        android:layout_marginBottom="5dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/hash_btn"
                        style="@style/phone_btn_style"
                        android:text="@string/hash" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/call_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:text="Call"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>